some cargo build updates

--- a/wasm96-core/Cargo.toml
+++ b/wasm96-core/Cargo.toml
@@ -32,7 +32,7 @@ wat = "1.243.0"
 hound = "3.5.1"
 qoaudio = "0.1.0"
 xmrs = { version = "0.9.7", features = ["import"] }
-xmrsplayer = { version = "0.9.7", features = ["demo"] }
+xmrsplayer = { version = "0.9.7" }
 
 [profile.dev]
 panic = "abort"
