--- a/wasm96-core/Cargo.toml
+++ b/wasm96-core/Cargo.toml
@@ -34,6 +34,10 @@ qoaudio = "0.1.0"
 xmrs = { version = "0.9.7", features = ["import"] }
 xmrsplayer = { version = "0.9.7" }
 wgpu = "28.0.0"
+glam = "0.30.9"
+bytemuck = "1.24.0"
+obj-rs = "0.7.4"
+nom_stl = "0.2.2"
 
 [profile.dev]
 panic = "abort"
