--- a/wasm96-core/Cargo.toml
+++ b/wasm96-core/Cargo.toml
@@ -38,7 +38,8 @@ xmrsplayer = { version = "0.9.7" }
 wgpu = "28.0.0"
 glam = "0.30.9"
 bytemuck = "1.24.0"
-obj-rs = "0.7.4"
+tobj = "4.0.3"
+ahash = "0.8.11"
 nom_stl = "0.2.2"
 
 [profile.dev]
